--- a/package.json
+++ b/package.json
@@ -19,8 +19,5 @@
   "bugs": {
     "url": "https://github.com/grokki91/nd-stream/issues"
   },
-  "homepage": "https://github.com/grokki91/nd-stream#readme",
-  "dependencies": {
-    "yargs": "^17.7.2"
-  }
+  "homepage": "https://github.com/grokki91/nd-stream#readme"
 }
